--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@nestjs/config": "0.5.0",
     "@nestjs/core": "7.1.1",
     "@nestjs/jwt": "7.0.0",
+    "@nestjs/mongoose": "7.0.2",
     "@nestjs/passport": "7.0.0",
     "@nestjs/platform-express": "7.1.1",
     "@nestjs/typeorm": "7.1.0",
     "bcryptjs": "2.4.3",
     "dotenv": "8.2.0",
     "lodash": "4.17.15",
+    "mongoose": "5.9.28",
     "mysql": "2.18.1",
     "passport": "0.4.1",
     "passport-jwt": "4.0.0",
