add Dockerfile and docker-compose

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "7.0.2",
     "@nestjs/passport": "7.0.0",
     "@nestjs/platform-express": "7.1.1",
+    "@nestjs/swagger": "^4.6.1",
     "@nestjs/typeorm": "7.1.0",
     "bcryptjs": "2.4.3",
     "dotenv": "8.2.0",
@@ -42,6 +43,7 @@
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.2",
     "rxjs": "6.5.5",
+    "swagger-ui-express": "^4.1.4",
     "typeorm": "0.2.25",
     "uuid": "8.1.0"
   },
@@ -86,6 +88,10 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "\\@src/(.*)": "<rootDir>/$1",
+      "@utils/(.*)": "<rootDir>/src/utils/$1"
+    }
   }
 }
